fix overflow bottom part of body issue

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body.game {
     /* background-image: linear-gradient(140deg, #EADEDB 0%, #BC70A4 50%, #BFD641 75%); */
     background: url(./images/bg.jpg) no-repeat;
     background-size: 100vw 100vh, cover;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 header h1 {
